--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,9 +6,16 @@
   <% end %>
 </p>
 
-<p><%= @article.body %></p>
-<%= link_to 'edit', edit_article_path(@article) %>
-<%= link_to 'delete', article_path(@article), method: :delete %><br><br>
+<p>
+  <% if @article.image.exists? %>
+    <%= image_tag @article.image.url %>
+  <% end %>
+</p>
+<% if logged_in? %>
+  <p><%= @article.body %></p>
+  <%= link_to 'edit', edit_article_path(@article) %>
+  <%= link_to 'delete', article_path(@article), method: :delete %><br><br>
+<% end %>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
